Closed Bug 558833 Opened 14 years ago Closed 14 years ago

TM: Fix GCTIMER for SweepDoubles

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: gwagner, Assigned: gwagner)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file, 1 obsolete file)

/Users/idefix/moz/ws0/js/src/jsgc.cpp: In function ‘void SweepDoubles(JSRuntime*, js::GCArenaReleaser*)’:
/Users/idefix/moz/ws0/js/src/jsgc.cpp:2881: error: ‘gcTimer’ was not declared in this scope
Assignee: general → anygregor
Attached patch patch (obsolete) — Splinter Review
Attachment #438514 - Flags: review?(jorendorff)
Comment on attachment 438514 [details] [diff] [review]
patch

Thanks.
Attachment #438514 - Flags: review?(jorendorff) → review+
Gregor, on second thought, could you instead move the TIMESTAMP back down into GC(), immediately after the call to SweepDoubles? That makes more sense to me.
Attached patch patchSplinter Review
Move Timestamp to GC
Attachment #438514 - Attachment is obsolete: true
Attachment #438642 - Flags: review?(jorendorff)
Comment on attachment 438642 [details] [diff] [review]
patch

Yes, that. :)
Attachment #438642 - Flags: review?(jorendorff) → review+
http://hg.mozilla.org/mozilla-central/rev/22fbcb1ca3f5
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: