Bug 558833 - Fix GCTIMER for SweepDoubles. r=jorendorff.